--- a/index.html
+++ b/index.html
@@ -9,65 +9,70 @@
 <body>
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href="">Taufik Afrizal</a></div>
+            <div class="logo"><a href="#">Taufik Afrizal</a></div>
             <div class="menu">
                 <ul>
                     <li><a href="#Home">Home</a></li>
                     <li><a href="#Cources">About Me</a></li>
-                    <li><a href="#Online-Cources">Online Cources</a></li>
+                    <li><a href="#Online-Cources">Online Courses</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="wrapper">
         <section id="Home">
-            <div class="wrapper">
-                <section id="Home">
-                    <img src="gedung-unpam.jfif" alt="Taufik" class="resize-img">
-                    <div class="kolom">
-                        <p class="deskripsi">Pemrograman Web</p>
-                        <h2>Universitas Pamulang</h2>
-                        <p>Universitas Pamulang (Unpam) adalah salah satu perguruan tinggi swasta terbesar di Indonesia yang berlokasi di Tangerang Selatan. Dikenal dengan biaya pendidikan yang terjangkau, Unpam menyediakan berbagai program studi untuk jenjang Diploma, Sarjana, hingga Pascasarjana, dengan fokus pada akses pendidikan yang luas dan berkualitas. Kampus ini memiliki visi untuk menghasilkan lulusan yang kompeten, berdaya saing, dan berkontribusi bagi masyarakat.</p>
-                    </div>
-                </section>
+            <img src="gedung-unpam.jfif" alt="Taufik" class="resize-img">
+            <div class="kolom">
+                <p class="deskripsi">Pemrograman Web</p>
+                <h2>Universitas Pamulang</h2>
+                <p>Universitas Pamulang (Unpam) adalah salah satu perguruan tinggi swasta terbesar di Indonesia yang berlokasi di Tangerang Selatan. Dikenal dengan biaya pendidikan yang terjangkau, Unpam menyediakan berbagai program studi untuk jenjang Diploma, Sarjana, hingga Pascasarjana, dengan fokus pada akses pendidikan yang luas dan berkualitas. Kampus ini memiliki visi untuk menghasilkan lulusan yang kompeten, berdaya saing, dan berkontribusi bagi masyarakat.</p>
             </div>
-            <style>
-                .resize-img {
-                    max-height: 300px;
-                    margin-right: 90px;
-                }
-            </style>
         </section>
+
+        <style>
+            .resize-img {
+                max-height: 300px;
+                margin-right: 90px;
+            }
+        </style>
 
         <section id="Cources">
             <div class="kolom">
-                <p class="deskripsi">You Will Need This</p>
+                <p class="deskripsi">Taufik Ganteng</p>
                 <h2>About Me</h2>
                 <p>Saya adalah mahasiswa Universitas Pamulang, jurusan Teknik Informatika, yang sangat antusias dalam mengeksplorasi dunia teknologi dan pemrograman. Ketertarikan saya pada bidang ini berakar dari keinginan untuk memahami bagaimana teknologi dapat memberikan dampak besar dalam kehidupan sehari-hari. Selain fokus pada pendidikan, saya juga aktif menjaga kesehatan dan kebugaran dengan bermain basket, yang merupakan hobi utama saya. Basket tidak hanya menjadi sarana olahraga, tetapi juga melatih kerja sama tim, ketangkasan, dan strategi, yang saya anggap penting baik dalam kehidupan maupun karier. Kombinasi antara pendidikan teknologi dan aktivitas fisik ini membantu saya menyeimbangkan kehidupan akademik dengan gaya hidup yang sehat dan produktif.</p>
             </div>
-            <img src="taufik.JPG" alt="" class="Gambar-bot">
+            <img src="taufik.JPG" alt="Taufik" class="Gambar-bot">
         </section>
 
         <section id="Online-Cources">
             <div class="tengah">
                 <div class="kolom">
                     <p class="deskripsi">Our Top Tutors</p>
-                    <h2>Online Cources</h2>
+                    <h2>Online Courses</h2>
                     <p>Tugas adalah pekerjaan atau kewajiban yang diberikan kepada seseorang untuk diselesaikan dalam jangka waktu tertentu. Tugas dapat berupa aktivitas akademik seperti penyelesaian laporan, penelitian, atau proyek, maupun pekerjaan profesional di tempat kerja. Tujuan dari tugas adalah untuk mengembangkan kemampuan, tanggung jawab, dan pemahaman seseorang terhadap suatu bidang tertentu.</p>
                 </div>
 
                 <div class="List-Of-Assignments">
                     <div class="Form-Login">
-                        <img src="SS.png"/>
+                        <img src="SS.png" alt="Form Login">
                         <a href="form-login.html"><p>Form Login</p></a>
                     </div>
                     <div class="Form-Login">
-                        <img src="kalkulator.png"/>
+                        <img src="foto ular.png" alt="Form Login">
+                        <a href=""><p>Tugas UTS</p></a>
+                    </div>
+                    <div class="Form-Login">
+                        <img src="kalkulator.png" alt="Kalkulator">
                         <a href="kalkulator.html"><p>Kalkulator</p></a>
                     </div>
                     <div class="Form-Login">
-                        <img src="SS.png"/>
-                        <p>Tugas 4</p>
+                        <img src="foto ular.png" alt="Game Ular">
+                        <a href="ular.html"><p>Game Ular</p></a>
+                    </div>
+                    <div class="Form-Login">
+                        <img src="penjualan.png" alt="Dashboard Penjualan">
+                        <a href="penjualan_tahunan.html"><p>Dashboard Penjualan</p></a>
                     </div>
                 </div>
             </div>
