--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                         <a href="form-login.html"><p>Form Login</p></a>
                     </div>
                     <div class="Form-Login">
-                        <img src="foto ular.png" alt="Form Login">
-                        <a href=""><p>Tugas UTS</p></a>
+                        <img src="tugas uts.png" alt="Form Login">
+                        <a href="https://uts-web-taufik.vercel.app/Public/dashboard.html"><p>Tugas UTS</p></a>
                     </div>
                     <div class="Form-Login">
                         <img src="kalkulator.png" alt="Kalkulator">
