--- a/index.html
+++ b/index.html
@@ -74,6 +74,23 @@
                         <img src="penjualan.png" alt="Dashboard Penjualan">
                         <a href="penjualan_tahunan.html"><p>Dashboard Penjualan</p></a>
                     </div>
+                    <div class="Form-Login">
+                        <img src="HTML.jpg" alt="Introduction To HTML">
+                        <a href="https://www.sololearn.com/certificates/CC-8YW3TLUC"><p>Introduction To HTML</p></a>
+                    </div>
+                    <div class="Form-Login">
+                        <img src="CSS.jpg" alt="Introduction To CSS">
+                        <a href="https://www.sololearn.com/certificates/CC-QSW5WEJH"><p>Introduction To CSS</p></a>
+                    </div>
+                    <div class="Form-Login">
+                        <img src="JAVA.jpg" alt="Introduction To Java">
+                        <a href="https://www.sololearn.com/certificates/CC-GZI6JUNR"><p>Introduction To Java</p></a>
+                    </div>
+                    <div class="Form-Login">
+                        <img src="Intermidiate.jpg" alt="Intermidiate Java">
+                        <a href="https://www.sololearn.com/certificates/CC-RAYW7PCF"><p>Intermidiate Java</p></a>
+                    </div>
+
                 </div>
             </div>
         </section>
